--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,43 @@ body {
     flex-direction: column;
     align-items: center;
 }
+#loading {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background-color: #F6F5F0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
+.object{
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    -webkit-animation: animate 2s infinite;
+    animation: animate 2s infinite;
+}
+
+#object_one{
+    left: 50px;
+    top: 50px;
+}
+
+
+#loading img {
+    animation: taxi-move 5s linear infinite;
+    width: 100px;
+}
+
+@keyframes taxi-move {
+    0% {
+        transform: translateX(-30%);
+    }
+    100% {
+        transform: translateX(100vw);
+    }
+}
 h2 {
     text-align: center;
     padding: 10px;
